changes in media query

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 .app-container ul li {
     list-style: none;
-    margin-left: 7px;  
+    margin-left: 7px;
 }
 
 .app-container ul li:first-child {
@@ -147,7 +147,12 @@ h3 {
     padding: 0 5px;
 }
 
+.input-login:hover {
+    border: 2px solid #000099;
+}
+
 .login-btn {
+    border: none;
     height: 50px;
     width: 405px;
     margin: 30px 125px 10px 125px;
@@ -179,7 +184,12 @@ h1 {
     word-spacing: 5px;
 }
 
-@media screen and (max-width: 423px) {
+/*small mobile device*/
+@media screen and (max-width:384px) {
+    .app-container {
+        margin: 10px;
+    }
+
     .logo {
         margin: 10px 10px;
         height: 60px;
@@ -197,7 +207,87 @@ h1 {
     }
 
     .app-container ul li a {
-        font-size: 12px;
+        font-size: 8px;
+        margin: 0;
+    }
+
+    .login-container {
+        margin: 50px 20px;
+    }
+
+    .input-login {
+        height: 30px;
+        width: 200px;
+        margin: 10px 30px;
+    }
+
+    .login-btn {
+        height: 30px;
+        width: 210px;
+        margin: 30px 30px 10px 30px;
+    }
+}
+
+/* mobile device*/
+@media screen and (min-width:384px) and (max-width:428.5px) {
+    .logo {
+        margin: 10px 10px;
+        height: 60px;
+        width: 80px;
+    }
+
+    .app-heading {
+        font-size: 15px;
+        margin-right: 0;
+    }
+
+    .input-text {
+        height: 150px;
+        width: 250px;
+    }
+
+    .app-container ul li a {
+        font-size: 8px;
+        margin: 0;
+    }
+
+    .login-container {
+        margin: 50px 20px;
+    }
+
+    .input-login {
+        height: 30px;
+        width: 200px;
+        margin: 10px 60px;
+    }
+
+    .login-btn {
+        height: 30px;
+        width: 210px;
+        margin: 30px 60px 10px 60px;
+    }
+}
+
+/* mobile device*/
+@media screen and (min-width:401.5px) and (max-width: 423px) {
+    .logo {
+        margin: 10px 10px;
+        height: 60px;
+        width: 80px;
+    }
+
+    .app-heading {
+        font-size: 15px;
+        margin-right: 0;
+    }
+
+    .input-text {
+        height: 150px;
+        width: 250px;
+    }
+
+    .app-container ul li a {
+        font-size: 8px;
     }
 
     .login-container {
@@ -215,10 +305,12 @@ h1 {
     }
 }
 
+/* mobile,tablet device*/
 @media screen and (min-width: 423.5px) and (max-width:660px) {
     .app-heading {
         margin-right: 0;
     }
+
     .logo {
         margin: 10px 10px;
         height: 60px;
@@ -240,10 +332,12 @@ h1 {
     }
 }
 
+/* mobile,tablet device*/
 @media screen and (min-width: 423.5px) and (max-width:500px) {
     .app-heading {
         margin-right: 0;
     }
+
     .login-container {
         margin: 50px 40px;
     }
@@ -252,7 +346,7 @@ h1 {
         height: 40px;
         width: 250px;
         margin: 10px 60px;
-      
+
     }
 
     .login-btn {
@@ -261,184 +355,207 @@ h1 {
         margin: 30px 62px 10px 62px;
     }
 }
-    @media screen and (min-width: 500.5px) and (max-width:526px) {
-        .app-heading {
-            margin-right: 0;
-        }
-        .login-container {
-            margin: 50px 40px;
-        }
 
-        .input-login {
-            height: 50px;
-            width: 300px;
-            margin: 10px 60px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 310px;
-            margin: 30px 62px 10px 62px;
-        }
+/* mobile,tablet device*/
+@media screen and (min-width: 500.5px) and (max-width:526px) {
+    .app-heading {
+        margin-right: 0;
     }
 
-    @media screen and (min-width:526.5px) and (max-width:624px) {
-        .app-heading {
-            margin-right: 0;
-        }
-        .login-container {
-            margin: 50px 40px;
-        }
-
-        .input-login {
-
-            height: 50px;
-            width: 350px;
-            margin: 10px 60px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 360px;
-            margin: 30px 62px 10px 62px;
-        }
-        .input-text {
-            height: 150px;
-            width: 300px;
-        }
-        .logo {
-            margin: 10px 10px;
-            height: 80px;
-            width: 100px;
-        }
-    
-        .app-heading {
-            font-size: 20px;
-            margin-right: 0;
-        }
-    
+    .login-container {
+        margin: 50px 40px;
     }
-    @media screen and (min-width:624.5px) and (max-width:704px){
-        .app-heading {
-            margin-right: 0;
-        }
-        .login-container {
-            margin: 50px 50px;
-        }
 
-        .input-login {
-            height: 50px;
-            width: 350px;
-            margin: 10px 120px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 360px;
-            margin: 30px 122px 10px 122px;
-        }
-        .input-text {
-            height: 150px;
-            width: 300px;
-        }
-        .logo {
-            margin: 10px 10px;
-            height: 80px;
-            width: 100px;
-        }
-    
-        .app-heading {
-            font-size: 20px;
-            margin-right: 0;
-        }
+    .input-login {
+        height: 50px;
+        width: 300px;
+        margin: 10px 60px;
     }
-    @media screen and (min-width:704.5px) and (max-width:904px){
-        .app-heading {
-            margin-right: 0;
-        }
-        .login-container {
-            margin: 50px 120px;
-        }
 
-        .input-login {
-            height: 50px;
-            width: 350px;
-            margin: 10px 80px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 360px;
-            margin: 30px 82px 10px 82px;
-        }
-        .logo {
-            margin: 10px 10px;
-            height: 80px;
-            width: 100px;
-        }
-    
-        .app-heading {
-            font-size: 20px;
-            margin-right:100px;
-        }
+    .login-btn {
+        height: 50px;
+        width: 310px;
+        margin: 30px 62px 10px 62px;
     }
-    @media screen and (min-width:903.5px) and (max-width:1004px){
-        .app-heading {
-            margin-right: 10px;
-        }
-        .login-container {
-            margin: 50px 150px;
-        }
+}
 
-        .input-login {
-            height: 50px;
-            width: 350px;
-            margin: 10px 130px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 360px;
-            margin: 30px 132px 10px 132px;
-        }
-        .logo {
-            margin: 10px 10px;
-            height: 80px;
-            width: 100px;
-        }
-    
-        .app-heading {
-            font-size: 20px;
-            margin-right: 100px;
-        }
+/* mobile,tablet device*/
+@media screen and (min-width:526.5px) and (max-width:624px) {
+    .app-heading {
+        margin-right: 0;
     }
-    @media screen and (min-width:1004.5px) and (max-width:1174px){
-        .app-heading {
-            margin-right: 400px;
-        }
-        .login-container {
-            margin: 50px 220px;
-        }
 
-        .input-login {
-            height: 50px;
-            width: 350px;
-            margin: 10px 160px;
-        }
-
-        .login-btn {
-            height: 50px;
-            width: 360px;
-            margin: 30px 162px 10px 162px;
-        }
-        .logo {
-            margin: 10px 10px;
-            height: 80px;
-            width: 100px;
-        }
-    
-        .app-heading {
-            font-size: 20px;
-            margin-right:200px;
-        }
+    .login-container {
+        margin: 50px 40px;
     }
+
+    .input-login {
+
+        height: 50px;
+        width: 350px;
+        margin: 10px 60px;
+    }
+
+    .login-btn {
+        height: 50px;
+        width: 360px;
+        margin: 30px 62px 10px 62px;
+    }
+
+    .input-text {
+        height: 150px;
+        width: 300px;
+    }
+
+    .logo {
+        margin: 10px 10px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .app-heading {
+        font-size: 20px;
+        margin-right: 0;
+    }
+
+}
+
+/* tablet device*/
+@media screen and (min-width:624.5px) and (max-width:704px) {
+    .app-heading {
+        margin-right: 0;
+    }
+
+    .login-container {
+        margin: 50px 50px;
+    }
+
+    .input-login {
+        height: 50px;
+        width: 350px;
+        margin: 10px 120px;
+    }
+
+    .login-btn {
+        height: 50px;
+        width: 360px;
+        margin: 30px 122px 10px 122px;
+    }
+
+    .input-text {
+        height: 150px;
+        width: 300px;
+    }
+
+    .logo {
+        margin: 10px 10px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .app-heading {
+        font-size: 20px;
+        margin-right: 0;
+    }
+}
+
+@media screen and (min-width:704.5px) and (max-width:904px) {
+    .app-heading {
+        margin-right: 0;
+    }
+
+    .login-container {
+        margin: 50px 120px;
+    }
+
+    .input-login {
+        height: 50px;
+        width: 350px;
+        margin: 10px 80px;
+    }
+
+    .login-btn {
+        height: 50px;
+        width: 360px;
+        margin: 30px 82px 10px 82px;
+    }
+
+    .logo {
+        margin: 10px 10px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .app-heading {
+        font-size: 20px;
+        margin-right: 100px;
+    }
+}
+
+/* Laptop device*/
+@media screen and (min-width:903.5px) and (max-width:1004px) {
+    .app-heading {
+        margin-right: 10px;
+    }
+
+    .login-container {
+        margin: 50px 150px;
+    }
+
+    .input-login {
+        height: 50px;
+        width: 350px;
+        margin: 10px 130px;
+    }
+
+    .login-btn {
+        height: 50px;
+        width: 360px;
+        margin: 30px 132px 10px 132px;
+    }
+
+    .logo {
+        margin: 10px 10px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .app-heading {
+        font-size: 20px;
+        margin-right: 100px;
+    }
+}
+
+/* Laptop device*/
+@media screen and (min-width:1004.5px) and (max-width:1174px) {
+    .app-heading {
+        margin-right: 400px;
+    }
+
+    .login-container {
+        margin: 50px 220px;
+    }
+
+    .input-login {
+        height: 50px;
+        width: 350px;
+        margin: 10px 160px;
+    }
+
+    .login-btn {
+        height: 50px;
+        width: 360px;
+        margin: 30px 162px 10px 162px;
+    }
+
+    .logo {
+        margin: 10px 10px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .app-heading {
+        font-size: 20px;
+        margin-right: 200px;
+    }
+}
